# aiida-firecrest

./: .firecrest-demo-config.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  conftest.py  firecrest_demo.py  fixtests.patch  pyproject.toml  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: check_release_tag.py  release.yml  server-tests.yml  tests.yml
aiida_firecrest/: __init__.py  cli.py  remote_path.py  scheduler.py  transport.py  utils.py  utils_test.py
tests/: conftest.py  test_basic.py  test_calculation.py  test_computer.py  test_scheduler.py  test_transport.py
tests/test_scheduler/: test_write_script_full.txt  test_write_script_minimal.txt
tests/tests_mocking_pyfirecrest/: conftest.py  test_computer.py  test_scheduler.py  test_transport.py
tests_new/: conftest.py  test_transport.py
