[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida_firecrest"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["aiida", "firecrest"]
requires-python = ">=3.7"
dependencies = [
    "aiida-core@git+git://github.com/aiidateam/aiida_core@develop#egg=aiida-core",
    "click",
    "pyfirecrest@git+git://github.com/ekouts/pyfirecrest@8f260c3a43220cf1304d679a33457e8eb096c5a1#egg=pyfirecrest",
    "pyyaml",
    "typing-extensions;python_version<'3.8'",
]

[project.urls]
Home = "http://github.com/aiidateam/aiida-firecrest"

[project.scripts]
aiida-firecrest-cli = "aiida_firecrest.cli:main"

[project.entry-points."aiida.schedulers"]
firecrest = "aiida_firecrest.scheduler:FirecrestScheduler"

[project.entry-points."aiida.transports"]
firecrest = "aiida_firecrest.transport:FirecrestTransport"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
docs = ["furo==2021.11.23"]

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/",
]

[tool.isort]
profile = "black"
src_paths = ["aiida_firecrest", "tests"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
scripts_are_modules = true
warn_redundant_casts = true
# warn_unused_ignores = true

# [[tool.mypy.overrides]]
# module = 'aiida.*'
# ignore_missing_imports = true
