[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida_firecrest"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["aiida", "firecrest"]
requires-python = ">=3.9"
dependencies = [
    "aiida-core@git+https://github.com/sphuber/aiida_core.git@fix/generalize-scheduler-interface#egg=aiida-core",
    "click",
    "pyfirecrest~=1.4.0",
    "pyyaml",
    "requests",
]

[project.urls]
Home = "http://github.com/aiidateam/aiida-firecrest"

[project.scripts]
aiida-firecrest-cli = "aiida_firecrest.cli:main"

[project.entry-points."aiida.schedulers"]
firecrest = "aiida_firecrest.scheduler:FirecrestScheduler"

[project.entry-points."aiida.transports"]
firecrest = "aiida_firecrest.transport:FirecrestTransport"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-timeout", "pgtest"]
docs = ["furo==2021.11.23"]

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/",
]

[tool.ruff]
line-length = 120
extend-select = ["A", "B", "C4", "ICN", "ISC", "N", "RUF", "SIM"]
# extend-ignore = []

[tool.isort]
profile = "black"
src_paths = ["aiida_firecrest", "tests"]
force_sort_within_sections = true

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
scripts_are_modules = true
warn_redundant_casts = true
# warn_unused_ignores = true

# [[tool.mypy.overrides]]
# module = 'aiida.*'
# ignore_missing_imports = true

[tool.pytest.ini_options]
timeout = 60
