[metadata]
name = aiida_firecrest
version = attr: aiida_firecrest.__version__
description = AiiDA Transport/Scheduler plugins for interfacing with FirecREST
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/aiidateam/aiida-firecrest
author = Chris Sewell
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = aiida

[options]
packages = find:
install_requires =
    aiida-core@git+git://github.com/aiidateam/aiida_core@develop#egg=aiida-core
    click
    pyfirecrest@git+git://github.com/ekouts/pyfirecrest@main#egg=pyfirecrest
    pyyaml
    typing-extensions;python_version<"3.8"
python_requires = >=3.7,<4
include_package_data = True

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    aiida-firecrest-cli = aiida_firecrest.cli:main
aiida.schedulers =
    firecrest = aiida_firecrest.scheduler:FirecrestScheduler
aiida.transports =
    firecrest = aiida_firecrest.transport:FirecrestTransport

[options.extras_require]
dev =
    pytest
    pytest-cov
docs =
    furo==2021.11.23

[flake8]
max-line-length = 100
extend-ignore = E203
